command-derive/tests/03-reject-no-code.stderr
error: No `code` parameter on ClientRequest::Ping
 --> $DIR/03-reject-no-code.rs:9:5
  |
9 |     Ping
  |     ^^^^
